--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="enter_to_G">У вас уже имеется аккаунт с этим Email</string>
     <!-- <string name="default_web_client_id">...</string>-->
 
+    <!-- Edit Activity -->
+    <string name="select_country">*Выберите страну</string>
+    <string name="select_city">*Выберите город</string>
  </resources>
