--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,10 @@
     <string name="category">Категория</string>
     <string name="select_category">*Выберите категорию</string>
     <string name="price">Цена</string>
-    <string name="price_hint">*Цена</string>
+    <string name="price_hint">*Укажите цену</string>
     <string name="description">Описание</string>
     <string name="description_hint">*Описание</string>
+    <string name="with_send">С отправкой</string>
+    <string name="send">Отправка</string>
+    <string name="publish">Опубликовать</string>
  </resources>
