Work with ad markup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,8 @@
     <string name="tel_number">Номер телефона</string>
     <string name="no_country_selected">*Сначала выберите страну</string>
     <string name="category">Категория</string>
+    <string name="title">Заголовок</string>
+    <string name="title_hint">*Укажите название товара</string>
     <string name="select_category">*Выберите категорию</string>
     <string name="price">Цена</string>
     <string name="price_hint">*Укажите цену</string>
